--- a/_layouts/roadtrip.html
+++ b/_layouts/roadtrip.html
@@ -4,10 +4,17 @@ layout: default
 
 
 
+<!-- CUSTOM BANNER FOR ROADTRIP PAGES -->
 <div class="banner">
   <div class="banner__wrap">
     <div class="banner__content row--padding js-banner-content-fade">
+
+      {% if page.video-id %}
+      <div class="row row--6-6-gutters vpad--xl row--valign text--white">
+        <div class="col">
+      {% else %}
       <div class="row text--white">
+      {% endif %}
 
         <span class="banner__title--super banner__breadcrumbs title title--xxs title--upper title--kerning">
           <a href="{{site.baseurl}}" class="title--bold">South Africa</a> /
@@ -16,9 +23,22 @@ layout: default
 
         <h1 class="banner__title title title--upper title--bold">{{page.banner.title}}</h1>
         <hr class="hr--left">
-        <p class="text--xl">{{page.banner.intro}}</p>
+        {{page.banner.intro}}
 
-      </div>
+        {% if page.video-id %}
+
+        </div><!--end .col -->
+        <div class="col">
+
+          <a href="javascript:void(0);" data-modal-id="modal-video" data-modal-item-id="video" data-video-id="{{page.video-id}}" class="js-open-modal banner__video bg-img bg-img--16-9 bg-img--rounded bg-img--shadow" style="background-image: url({{site.baseurl}}/img/content/{{page.id}}/video.jpg);">
+            <span class="banner__video-play"></span>
+          </a>
+
+        </div>
+
+        {% endif %}
+      </div><!--end .row -->
+
     </div>
   </div>
   {% assign pages = site.html_pages %}
@@ -32,6 +52,10 @@ layout: default
 
 
 
+
+
+
+
 <div class="page__content">
 
   <div class="roadtrip">
@@ -39,10 +63,19 @@ layout: default
 
 
 
+
+
+
+    <!-- MAP CANVAS, GENERATED ON PAGE LOAD -->
     <div class="roadtrip__map" id="map"></div>
 
 
 
+
+
+
+
+    <!-- MAP SIDEBAR WITH SITE CONTENT -->
     <div class="roadtrip__pane">
 
       <div class="section vpad--xxxl text--white row row--padding bg--fixed" style="background-image: url({{site.baseurl}}/img/content/{{page.id}}/banner.jpg);">
@@ -99,6 +132,20 @@ layout: default
 
 
 
+
+
+
+
     </div>
   </div>
 </div>
+
+
+
+
+
+{% if page.video-id %}
+  {% include modal/modal-video.html %}
+{% endif %}
+
+
