--- a/css/core/bg-img/_content.scss
+++ b/css/core/bg-img/_content.scss
@@ -39,9 +39,9 @@
     .bg-img:hover & { opacity: .8; }
   }
   &--shadow {
-    box-shadow: 0px 15px 45px rgba($grey-darkest,0.3);
+    box-shadow: 0px 15px 45px rgba($black,0.5);
     &:hover {
-      box-shadow: 0px 20px 60px rgba($grey-darkest,0.5);
+      box-shadow: 0px 20px 60px rgba($black,0.8);
     }
   }
   &--hover:hover {
@@ -55,6 +55,15 @@
     background-color: rgba($grey-darkest, 0.5);
     padding: 4px 10px;
     font-size: $s-1;
-    color: #dddddd;
+    color: $grey-lighter;
+  }
+
+  &__link {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: $z-content-overlay;
   }
 }
