--- a/_includes/components/roadtrip.html
+++ b/_includes/components/roadtrip.html
@@ -1,6 +1,6 @@
 
 
-<a href="{{roadtrip.url}}" class="roadtrip-tile{% if include.class == 'large' %} roadtrip-tile--large bg-img--16-9{% else %} bg-img--21-9{% endif %} bg-img bg-img--rounded bg-img--shadow bg--grey-darkest">
+<a href="{{site.baseurl}}{{roadtrip.url}}" class="roadtrip-tile{% if include.class == 'large' %} roadtrip-tile--large bg-img--16-9{% else %} bg-img--21-9{% endif %} bg-img bg-img--rounded bg-img--shadow bg--grey-darkest">
   <div class="roadtrip-tile__content text--white">
 
     {% if include.class == 'large' %}
@@ -15,6 +15,7 @@
     </ul>
 
   </div>
+
   <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/bg/{{roadtrip.id}}-nav.jpg);"></div>
 </a>
 
