--- a/css/page/_banner.scss
+++ b/css/page/_banner.scss
@@ -7,8 +7,10 @@ $core-nav-height-sm:  $s8;
   position: relative;
   z-index: 0;
   color: white;
-  height: 66%;
-  min-height: 460px;
+  min-height: 600px;
+  @include bp(lg){
+    height: 66%;
+  }
   .page--overview & { height: 100%; }
   &__wrap {
     position: relative;
@@ -20,13 +22,15 @@ $core-nav-height-sm:  $s8;
     }
   }
   &__content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
     padding-top: $core-nav-height-sm*2;
     @include bp(md){
       padding-top: $core-nav-height*2;
+    }
+    @include bp(lg){
+      position: absolute;
+      bottom: 0;
+      left: 0;
     }
     .page--overview & {
       bottom: auto;
@@ -50,6 +54,28 @@ $core-nav-height-sm:  $s8;
     @include bp(xl){ font-size: $s11; }
     &--sub { line-height: 1; }
     &--super { line-height: 1; }
+  }
+
+  &__video {
+    &-play {
+      $button-size: 100px;
+      position: absolute;
+      z-index: $z-content-overlay+1;
+      top: 50%;
+      left: 50%;
+      margin-top: -($button-size/2);
+      margin-left: -($button-size/2);
+      height: $button-size;
+      width: $button-size;
+      background-image: url("../img/icons/play.png");
+      @include background-attributes;
+      background-size: contain;
+      cursor: pointer;
+      @include transition;
+    }
+    &:hover &-play {
+      transform: scale( 1.1, 1.1);
+    }
   }
 
   &__intro {
