--- a/css/page/_roadtrip.scss
+++ b/css/page/_roadtrip.scss
@@ -3,22 +3,21 @@
 .roadtrip {
   @include layout(12 0);
   width: 100%;
+  height: 100vh;
   position: relative;
+  overflow: hidden;
   margin-top: $s5;
   @include bp(lg){
     margin-top: $s8;
   }
-  &:after {
-    content: " ";
-    display: block;
-    clear: both;
-  }
+
+
 
   // map
   &__map {
     background-color: #B5D4F3;
     position: absolute !important;
-    height: 100vh;
+    height: 100%;
     top: 0;
     @include bp(xl){
       @include span(6);
@@ -35,58 +34,98 @@
     }
   }
 
+
   // content sidebar
   &__pane {
-    margin-top: 3em;
     background-color: $white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
     @include bp(xl){
       @include span(6 last);
     }
   }
-}
 
 
 
-// highlights/stopoffs/Waypoints
-.waypoint {
-  position: relative;
-  & .wp { top: 1px; }
-
-  // active state when marker is activated
-  &--active {
-    border-left: 4px solid $theme-secondary;
+  // intro section for roadtrip
+  &__intro {
+    &-banner {
+      @include background-attributes();
+      width: 100%;
+      padding: $s12 $s8;
+    }
+    // link boxes in the intro section
+    &-wplink {
+      display: flex;
+      background-color: $grey-lightest;
+      text-align: center;
+      padding: $s2 $s2;
+      margin-bottom: $s2;
+      width: 100%;
+      height: $s13;
+      align-items: center;
+      &:nth-last-child(-n+2) {
+        margin-bottom: 0;
+      }
+    }
   }
 
-  &__images {
-    @include clearfix();
-  }
-  &__content {
-    padding: $s4;
-  }
-
-  &__highlights {
-    margin-top: $s2;
-    padding: $s2 0;
-    border-top: 2px solid $grey-lighter;
-  }
-  &__highlight {
-    background-color: $grey-lighter;
-    color: $grey-darker;
-    font-weight: 600;
-    padding: 0.3em 1.2em;
-    margin: 0 0.3em 0.6em 0.3em;
-    border-radius: 99em;
-    text-align: center;
-    display: inline-block;
-  }
-
-}
 
 
-.marker {
-  width: 30px;
-  height: 38px;
-  background-image: url(../img/icons/marker.png);
-  background-size: 100% auto;
+  // section of roadtrip write-up
+  &__section {
+    & .wp { top: 1px; }
+    @include transition();
+    background-color: $white;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    overflow: scroll;
+    opacity: 0;
+
+    // active state when marker is activated
+    &--active {
+      opacity: 1;
+      visibility: visible;
+      z-index: $z-content-upper;
+    }
+
+    // content layout of section
+    &-content {
+      margin: $s4;
+      padding: $s4 $s4 $s2;
+    }
+    &-images {
+      @include clearfix();
+      margin: $s4;
+    }
+    &-footer {
+      margin: $s4;
+      padding: $s2 $s4 $s4;
+    }
+
+    &-highlights {
+      padding-top: $s0;
+    }
+    &-highlight {
+      border: 1px solid $grey-lighter;
+      border-radius: 99em;
+      color: $grey-darker;
+      font-weight: 700;
+      font-size: 0.83em;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      padding: 0.4em 1.2em;
+      margin-right: 0.5em;
+      margin-bottom: 0.8em;
+      text-align: center;
+      display: inline-block;
+    }
+  }
+
+
+
 }
 
