roadtrip design dev

--- a/_includes/roadtrip/banner.html
+++ b/_includes/roadtrip/banner.html
@@ -17,6 +17,8 @@
 
         <h1 class="banner__title title title--upper title--bold">{{page.banner.title}}</h1>
 
+        <a href="#roadtrip" class="btn btn--outline-white">Explore the roadtrip</a>
+
         {% if page.video-id %}
 
         </div><!--end .col -->
