--- a/css/components/_buttons.scss
+++ b/css/components/_buttons.scss
@@ -5,7 +5,7 @@
 .btn {
   position: relative;
   display: inline-block;
-  padding: $s0 $s1;
+  padding: $s1 $s3;
   color: $text-white;
   font-weight: 600;
   font-size: $s-1;
@@ -16,7 +16,7 @@
   border-radius: 3px;
   cursor: pointer;
   @include bp(lg){
-    padding: $s2 $s6;
+    padding: $s1 $s4;
   }
   @include transition;
   * + & { margin-top: 1.5em; }
@@ -65,6 +65,18 @@
       }
     }
 
+    &-subtle {
+      border: 1px solid $grey-lighter;
+      &:hover {
+        color: $text-dark;
+        background-color: $grey-lighter;
+      }
+    }
+
+  }
+
+  &--square {
+    padding: $s1 $s1;
   }
 
   &--solid {
