place images, plot maps, fixes from Hols across the site

--- a/_includes/components/roadtrip.html
+++ b/_includes/components/roadtrip.html
@@ -16,6 +16,6 @@
 
   </div>
 
-  <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/bg/{{roadtrip.id}}-nav.jpg);"></div>
+  <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/content/{{roadtrip.id}}/nav.jpg);"></div>
 </a>
 
