--- a/_includes/roadtrip/banner.html
+++ b/_includes/roadtrip/banner.html
@@ -4,7 +4,7 @@
     <div class="banner__content row--padding js-banner-content-fade">
 
       {% if page.video-id %}
-      <div class="row row--6-6-gutters vpad--xl row--valign text--white">
+      <div class="row row--6-6-gutters row--valign text--white">
         <div class="col">
       {% else %}
       <div class="row text--white">
@@ -15,7 +15,7 @@
           <a href="{{site.baseurl}}/roadtrip" class="title--bold">Roadtrips</a>
         </span>
 
-        <h1 class="banner__title title title--upper title--bold">{{page.banner.title}}</h1>
+        <h1 class="banner__title banner__title--sm title title--bold">{{page.banner.title}}</h1>
 
         <a href="#roadtrip" class="btn btn--outline-white">Explore the roadtrip</a>
 
