--- a/css/page/_banner.scss
+++ b/css/page/_banner.scss
@@ -7,31 +7,30 @@ $core-nav-height-sm:  $s8;
   position: relative;
   z-index: 0;
   color: white;
-  min-height: 600px;
   @include bp(lg){
-    height: 66%;
+    min-height:580px;
+    height: 75%;
   }
   .page--overview & { height: 100%; }
   &__wrap {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: rgba($grey-darkest,0.3);
     @include bp(lg){
       background-color: transparent;
     }
   }
   &__content {
     width: 100%;
-    padding-top: $core-nav-height-sm*2;
+    padding-top: $s8+$core-nav-height-sm*2;
+    padding-bottom: $s8;
     @include bp(md){
-      padding-top: $core-nav-height*2;
-    }
-    @include bp(lg){
       position: absolute;
       bottom: 0;
       left: 0;
+      padding-top: $core-nav-height*2;
     }
+
     .page--overview & {
       bottom: auto;
       top: 50%;
@@ -50,8 +49,14 @@ $core-nav-height-sm:  $s8;
     margin: auto;
     font-size: $s7;
     * + & { padding-top: 0; }
-    @include bp(md){ font-size: $s9; }
-    @include bp(xl){ font-size: $s11; }
+    @include bp(md){
+      font-size: $s9;
+      &--sm  { font-size: $s9; }
+    }
+    @include bp(xl){
+      font-size: $s11;
+      &--sm  { font-size: $s9; }
+    }
     &--sub { line-height: 1; }
     &--super { line-height: 1; }
   }
