--- a/css/page/_roadtrip.scss
+++ b/css/page/_roadtrip.scss
@@ -1,30 +1,41 @@
 // Styles for the roadtrip maps
 
+$map-height-mobile: 300px;
+
+
 .roadtrip {
   @include layout(12 0);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   overflow: hidden;
-  margin-top: $s5;
-  @include bp(lg){
-    margin-top: $s8;
+  background-color: $white;
+  @include max-bp(lg){
+    height: auto !important;
   }
-
 
 
   // map
   &__map {
     background-color: #B5D4F3;
-    position: absolute !important;
-    height: 100%;
-    top: 0;
-    @include bp(xl){
+    position: relative;
+    @include max-bp(lg){
+      height: $map-height-mobile !important;
+    }
+    @include span(12);
+    @include bp(lg){
+      position: absolute !important;
+      height: 100%;
+      height: 100vh;
+      top: 0;
+      bottom: 0;
+      left: 0;
       @include span(6);
     }
     &.js-map-fixed {
       position: fixed !important;
       height: 100%;
+      height: 100vh;
       top: 0;
       left: 0;
     }
@@ -38,11 +49,9 @@
   // content sidebar
   &__pane {
     background-color: $white;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    @include bp(xl){
+    position: relative;
+    @include span(12);
+    @include bp(lg){
       @include span(6 last);
     }
   }
@@ -51,15 +60,24 @@
 
   // intro section for roadtrip
   &__intro {
+    margin-top: -$map-height-mobile;
+    @include bp(lg){
+      margin-top: 0;
+    }
     &-banner {
       @include background-attributes();
       width: 100%;
-      padding: $s12 $s8;
+      padding: $s6 $s2;
+      @include bp(lg){
+        padding: $s12 $s8;
+      }
     }
     // link boxes in the intro section
     &-wplink {
+      @include transition();
       display: flex;
       background-color: $grey-lightest;
+      box-shadow: 0 0 0 rgba($grey-darkest,0);
       text-align: center;
       padding: $s2 $s2;
       margin-bottom: $s2;
@@ -69,6 +87,11 @@
       &:nth-last-child(-n+2) {
         margin-bottom: 0;
       }
+      &:last-child:nth-child(odd) { width: 100% !important; }
+      &:hover {
+        background-color: $white;
+        box-shadow: 0 0 30px rgba($grey-darkest,0.1);
+      }
     }
   }
 
@@ -77,50 +100,68 @@
   // section of roadtrip write-up
   &__section {
     & .wp { top: 1px; }
-    @include transition();
     background-color: $white;
-    position: absolute;
-    top: 0;
-    height: 100%;
-    overflow: scroll;
-    opacity: 0;
+    position: relative;
+    @include bp(lg){}
 
     // active state when marker is activated
     &--active {
-      opacity: 1;
+      display: block;
       z-index: $z-content-upper;
+    }
+
+    // title section
+    &-title {
+      .js-waypoint & { padding-top: $s3; }
     }
 
     // content layout of section
     &-content {
-      margin: $s4;
-      padding: $s4 $s6 $s2;
+      margin: $s2;
+      @include bp(lg){
+        margin: $s4;
+        padding: $s4 $s6;
+      }
     }
     &-images {
       @include clearfix();
-      margin: $s4;
+      margin: $s2;
+      @include bp(lg){
+        margin: $s4;
+      }
     }
     &-footer {
-      margin: $s4;
-      padding: $s2 $s6 $s4;
+      margin: $s2;
+      @include bp(lg){
+        margin: $s4;
+        padding: $s2 $s6 $s4;
+      }
     }
 
     // return button by title
     &-return {
       @include transition();
-      $return-size: 46px;
+      $return-size: 40px;
       width: $return-size;
       height: $return-size;
       position: absolute;
-      left: $return-size/4;
-      top: $s8;
+      left: $s2;
+      top: -$return-size;
       border-radius: 99px;
       border: 1px solid $grey-lighter;
+      background-color: $white;
       background-image: url('../img/icons/arrow-left-black.svg');
       background-repeat: no-repeat;
       background-size: 13px;
       background-position: 45% center;
       &:hover { background-color: $grey-lighter; }
+      @include bp(lg){
+        $return-size: 46px;
+        width: $return-size;
+        height: $return-size;
+        left: $return-size/4;
+        top: $s8;
+      }
     }
 
     // section highlight tags
@@ -132,15 +173,21 @@
       border: 1px solid $grey-lighter;
       border-radius: 99em;
       color: $grey-darker;
-      font-weight: 700;
-      font-size: 0.83em;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
+      font-weight: 600;
+      font-size: 0.8em;
       padding: 0.4em 1.2em;
-      margin-right: 0.5em;
-      margin-bottom: 0.8em;
+      margin-right: 0.15em;
+      margin-bottom: 0.3em;
       text-align: center;
       display: inline-block;
+      @include bp(lg){
+        font-weight: 700;
+        font-size: 0.83em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        margin-right: 0.5em;
+        margin-bottom: 0.8em;
+      }
     }
 
   }
