--- a/css/components/_offer-promo.scss
+++ b/css/components/_offer-promo.scss
@@ -1,7 +1,7 @@
 .offer-promo {
   position: relative;
   color: $white;
-  background-color: rgba($grey-darker,.75);
+  background-color: $grey-darker;
   text-align: center;
   padding-top: $s13;
   padding-bottom: $s13;
@@ -11,7 +11,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: $z-background;
+    z-index: 0;
+    opacity: 0.2;
   }
   &__bg {
     position: absolute;
