--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -30,7 +30,7 @@ layout: default
 </div>
 
 
-<div class="section">
+<div class="section row--padding">
   <!-- page subjects -->
   {% assign subjects = page.subjects %}
   {% for subject in subjects %}
@@ -58,18 +58,14 @@ layout: default
     {% for guide in guides %}
 
       {% unless guide.id == page.id %}
-      <div class="col">
-        <a href="{{site.baseurl}}{{guide.url}}" class="bg-img bg-img--3-4 bg-img--rounded bg-img--shadow bg-img--hover bg--grey-darkest">
-          <div class="bg-img__content text--white text--center">
-            <span class="title title--md">{{guide.title}}</span>
-            <p>{{guide.banner.intro|strip_html|truncatewords:12}}</p>
-            <span class="btn btn--sm btn--solid">Read more</span>
-          </div>
-          <div class="bg-img__bg" style="background-image: url({{site.baseurl}}/img/content/{{guide.id}}/nav.jpg);"></div>
-        </a>
-      </div>
+        {% include components/explore-tile.html %}
       {% endunless %}
 
     {% endfor %}
   </div>
 </div>
+
+
+
+
+{% include page/offers-banner.html %}
