--- a/css/core/bg-img/_content.scss
+++ b/css/core/bg-img/_content.scss
@@ -39,9 +39,9 @@
     .bg-img:hover & { opacity: .8; }
   }
   &--shadow {
-    box-shadow: 0px 15px 45px rgba($black,0.5);
+    box-shadow: 0px 15px 45px rgba($grey-darkest,0.3);
     &:hover {
-      box-shadow: 0px 20px 60px rgba($black,0.8);
+      box-shadow: 0px 20px 60px rgba($grey-darkest,0.6);
     }
   }
   &--hover:hover {
