--- a/css/typography/_titles.scss
+++ b/css/typography/_titles.scss
@@ -31,7 +31,7 @@
   &--tight      { line-height: .9; }
   &--tighter    { line-height: .8; }
   &--capital    { text-transform: capitalize; }
-  &--upper      { text-transform: uppercase; line-height: 1; }
+  &--upper      { text-transform: uppercase; }
   &--italic     { font-style: italic; }
 
   &--xxxxxl       { font-size: $s7; line-height: 1.1; }
