crediting Craig on photos, offer update

--- a/_includes/components/roadtrip-lg.html
+++ b/_includes/components/roadtrip-lg.html
@@ -5,11 +5,11 @@
 
     <h4 class="title title--super title--xxxs title--upper title--kerning title--bold">{{roadtrip.roadtrip.title}}</h4>
 
-    <h3 class="title title--lg">{{roadtrip.title}}</h3>
+    <h3 class="title title--lg">{{roadtrip.banner.title}}</h3>
 
     <ul class="list--lined">
       <li><p><span class="text--bold">Time:</span> {{roadtrip.roadtrip.meta.time}}</p></li>
-      <li><p><span class="text--bold">Distance:</span> {{roadtrip.roadtrip.meta.distance}} / {{roadtrip.roadtrip.meta.time}}</p></li>
+      <li><p><span class="text--bold">Distance:</span> {{roadtrip.roadtrip.meta.distance}}</p></li>
     </ul>
 
   </div>
