--- a/css/typography/_titles.scss
+++ b/css/typography/_titles.scss
@@ -24,6 +24,7 @@
   &--np         { padding-top: 0; padding-bottom: 0; }
   &--np + *     { padding-top: 0; padding-bottom: 0; }
   &--light      { font-weight: 300; }
+  &--medium     { font-weight: 500; }
   &--bold       { font-weight: 600; }
   &--bolder     { font-weight: 700; }
   &--kerning    { letter-spacing: .15em; }
