--- a/_includes/components/roadtrip.html
+++ b/_includes/components/roadtrip.html
@@ -1,11 +1,11 @@
 
 
-<a href="{{site.baseurl}}{{roadtrip.url}}" class="roadtrip-tile bg-img--4-3 bg-img--lg-1-1 bg-img--xl-4-3 bg-img--xxxl-21-9 bg-img bg-img--rounded bg-img--shadow bg--grey-darkest">
+<a href="{{site.baseurl}}{{roadtrip.url}}" class="roadtrip-tile bg-img--4-3 bg-img--lg-3-4 bg-img--xxxl-1-1 bg-img bg-img--rounded bg-img--shadow bg--grey-darkest">
   <div class="roadtrip-tile__content text--white">
 
-    <h4 class="title title--super title--xxxs title--upper title--kerning title--bold">{{roadtrip.roadtrip.title}}</h4>
+    <h4 class="title title--super title--xxxs title--upper title--kerning title--medium">{{roadtrip.roadtrip.title}}</h4>
 
-    <h3 class="title title--sm">{{roadtrip.banner.title}}</h3>
+    <h3 class="title roadtrip-tile__title">{{roadtrip.banner.title}}</h3>
 
     <ul class="list--lined">
       <li><p><span class="text--bold">Time:</span> {{roadtrip.roadtrip.meta.time}}</p></li>
