--- a/_includes/modal/modal-video.html
+++ b/_includes/modal/modal-video.html
@@ -6,10 +6,11 @@
 
 
       <div class="modal__video modal__content modal__content--video row--padding bg-img bg-img--16-9"  data-content-category="video">
-        <iframe class="modal__iframe" src="" width="100%" height="100%" frameborder="0" style="position:absolute;width:100%;height:100%;left:0;top:0;" allowfullscreen></iframe>
+        <iframe class="modal__iframe" src="https://www.youtube.com/embed/EaD3n3Mvc2Q?controls=1&rel=0&showinfo=0&modestbranding=1" width="100%" height="100%" frameborder="0" style="position:absolute;width:100%;height:100%;left:0;top:0;" allowfullscreen></iframe>
       </div>
 
 
     </div>
   </div>
 </div>
+
