flight center offers and sale card

--- a/_includes/components/offers.html
+++ b/_includes/components/offers.html
@@ -1,11 +1,11 @@
 {% assign offers = site.data.offers | sort: 'saved' | reverse %}
+{% assign external-offers = site.data.offers-external %}
 
 <div class="row">
   {% for offer in offers %}
-    {% if offer.se-offer %}
-      {% include components/offer.html type='se' %}
-    {% else %}
-      {% include components/offer.html type='direct' %}
-    {% endif %}
+    {% include components/offer.html %}
+  {% endfor %}
+  {% for offer in external-offers %}
+    {% include components/offer-external.html %}
   {% endfor %}
 </div>
