--- a/css/components/_offer.scss
+++ b/css/components/_offer.scss
@@ -137,6 +137,7 @@
     font-size: 1.5em;
     font-weight: 400;
     line-height: 1;
+    &--fc { color: #ca1214; }
   }
   &__arrow {
     display: none;
@@ -151,6 +152,11 @@
       background-size: auto 22px;
       background-position: 20px center;
       .svg & { background-image: url('../img/icons/arrow-right-orange.svg'); }
+      &--fc {
+        border-color: #ca1214;
+        background-image: url('../img/icons/arrow-right-fc.png');
+        .svg & { background-image: url('../img/icons/arrow-right-fc.svg'); }
+      }
     }
   }
   &__bottom {
